kubernetes-manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: my-app
  type: ClusterIP
