kubernetes-manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: my-service
              servicePort: 3000
